--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,11 @@ body{
 }
 
 #wrap {width: 100%; } 
-#wrap header { background: url(../images/main_video0906.gif); width:100%; height:500px; } 
+#wrap header { background: url(../images/main_video0906.gif)no-repeat center/cover;  width:100%; height:500px; min-width: 100%; } 
 
 #wrap header ul { width:150px; height:40px; border-radius: 30px; background-color: beige; opacity: 0.3; 
     margin-right:500px; margin-top: 50px; float:right; display: flex; justify-content:space-evenly; padding-top: 20px; } 
 #wrap header .innerHeader ul li img{width: 25px; height: 25px;}
-
 
 
 
@@ -51,16 +50,16 @@ main .info ul.click{display: flex; justify-content:space-between; width: 1300px;
 main .info ul.click li {width: 300px;height: 300px; overflow: hidden;}
 main .info ul.click li a img {width: 100%; height: 100%;transition: 0.3s;}
 main .info ul.click li a img:hover {width: 100%; height: 100%; transform: scale(1.2); opacity: 0.8;}
+main .logo{margin-top: 50px;}
 
 
 
 
-
-footer {width: 100%; height:400px; position: relative; } 
+footer {width: 100%; height:400px; position: relative; min-width: 100%; } 
 footer.footerinner {width: 1300px; height: 400px;}
 footer .footerinner .ftimg img{height:350px; float:right;}
-footer .footerinner .ftimg li:nth-child(1){position:absolute; top: 70px; right:200px ; z-index:99999999;} 
-footer .footerinner .ftimg li:nth-child(2){position:absolute; top:0; right:750px;  z-index:99999999;}
+footer .footerinner .ftimg li:nth-child(1){position:absolute; top: 90px; right:200px ; z-index:99999999;} 
+footer .footerinner .ftimg li:nth-child(2){position:absolute; top:70px; right:750px;  z-index:99999999;}
 
 footer .footerinner .line img{width: 100%; height:400px;  position: relative;  }
 
